--- a/homework/homework4/stage04_data-acquisition-and-ingestion_homework-starter.ipynb
+++ b/homework/homework4/stage04_data-acquisition-and-ingestion_homework-starter.ipynb
@@ -179,9 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scraped data validation: {'missing': [], 'shape': (503, 8), 'na_total': 0}\n"
+     ]
+    }
+   ],
    "source": [
     "SCRAPE_URL = 'https://en.wikipedia.org/wiki/List_of_S%26P_500_companies'\n",
     "headers = {'User-Agent':'AFE-Homework/1.0'}\n",
@@ -233,11 +241,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved data/raw/scrape_site-wikipedia_table-sp500_20250817-133748.csv\n"
+     ]
+    }
+   ],
    "source": [
-    "_ = save_csv(df_scrape, prefix='scrape', site='example', table='markets')"
+    "_ = save_csv(df_scrape, prefix='scrape', site='wikipedia', table='sp500')"
    ]
   },
   {
@@ -245,11 +261,76 @@
    "metadata": {},
    "source": [
     "## Documentation\n",
-    "- API Source: (URL/endpoint/params)\n",
-    "- Scrape Source: (URL/table description)\n",
-    "- Assumptions & risks: (rate limits, selector fragility, schema changes)\n",
-    "- Confirm `.env` is not committed."
+    "\n",
+    "### API Source\n",
+    "- **Service Provider**: Alpha Vantage (primary) / Yahoo Finance (fallback)\n",
+    "- **Base URL**: `https://www.alphavantage.co/query`\n",
+    "- **Endpoint**: `TIME_SERIES_DAILY`\n",
+    "- **Parameters**:\n",
+    "  - `function=TIME_SERIES_DAILY` (daily adjusted prices)\n",
+    "  - `symbol=AAPL` (Apple Inc. stock)\n",
+    "  - `outputsize=compact` (last 100 data points)\n",
+    "  - `apikey=...` (loaded from .env)\n",
+    "- **Fallback**: yfinance `yf.download()` with 3-month daily data\n",
+    "- **Validation Logic**:\n",
+    "  - Checks for required columns: `date` and `adj_close`\n",
+    "  - Validates date formatting and numeric values\n",
+    "  - Records missing values and dataset shape\n",
+    "\n",
+    "### Scrape Source\n",
+    "- **URL**: `https://en.wikipedia.org/wiki/List_of_S%26P_500_companies`\n",
+    "- **Table Description**: Current S&P 500 constituents with:\n",
+    "  - Ticker symbols\n",
+    "  - Company names\n",
+    "  - GICS sectors\n",
+    "  - Headquarters locations\n",
+    "- **Selector**: First table with class `wikitable`\n",
+    "- **Fallback**: Embedded minimal table with AAPL/MSFT examples\n",
+    "- **Validation Logic**:\n",
+    "  - Checks all scraped columns exist\n",
+    "  - Validates no empty rows\n",
+    "  - Ensures ticker symbols are present\n",
+    "\n",
+    "### Assumptions & Risks\n",
+    "**API**:\n",
+    "1. Rate Limits:\n",
+    "   - Alpha Vantage: 5 requests/minute, 500/day (free tier)\n",
+    "   - yfinance: No strict limits but may throttle\n",
+    "2. Schema Stability:\n",
+    "   - Alpha Vantage JSON structure may change\n",
+    "   - Column naming conventions may vary\n",
+    "3. Data Quality:\n",
+    "   - Markets closed days will be missing\n",
+    "   - Adjusted prices may change retrospectively\n",
+    "\n",
+    "**Scraping**:\n",
+    "1. Page Structure:\n",
+    "   - Wikipedia table class (`wikitable`) may change\n",
+    "   - Column order/headers might be modified\n",
+    "2. Legal:\n",
+    "   - Wikipedia allows scraping with proper User-Agent\n",
+    "   - Heavy scraping may lead to IP blocking\n",
+    "3. Data Consistency:\n",
+    "   - Company names may include special characters\n",
+    "   - Some cells may contain footnotes\n",
+    "\n",
+    "### Environment & Reproducibility\n",
+    "- **`.env` Status**: Confirmed not committed (in `.gitignore`)\n",
+    "- **Filename Convention**:\n",
+    "- API: `api_source-[alpha|yfinance]_symbol-[SYMBOL]_[TIMESTAMP].csv`\n",
+    "- Scrape: `scrape_site-[SOURCE]_table-[NAME]_[TIMESTAMP].csv`\n",
+    "\n",
+    "### Validation Summary\n",
+    "```python\n",
+    "print(\"API Data Validation:\", v_api)\n",
+    "print(\"Scraped Data Validation:\", v_scrape)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3f84b75",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
