--- a/homework/homework5/stage05_data-storage_homework-starter.ipynb
+++ b/homework/homework5/stage05_data-storage_homework-starter.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "# Homework Starter — Stage 05: Data Storage\n",
-    "Name: \n",
-    "Date: \n",
+    "Name: Yuqing Yan\n",
+    "Date: 08/17/2025\n",
     "\n",
     "Objectives:\n",
     "- Env-driven paths to `data/raw/` and `data/processed/`\n",
@@ -16,14 +16,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RAW -> /Users/yuqingyan/Desktop/bootcamp_Yuqing_Yan/homework/homework5/data/raw\n",
+      "PROC -> /Users/yuqingyan/Desktop/bootcamp_Yuqing_Yan/homework/homework5/data/processed\n"
+     ]
+    }
+   ],
    "source": [
     "import os, pathlib, datetime as dt\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from dotenv import load_dotenv\n",
     "\n",
+    "# 1. Initialize environment paths\n",
     "load_dotenv()\n",
     "RAW = pathlib.Path(os.getenv('DATA_DIR_RAW', 'data/raw'))\n",
     "PROC = pathlib.Path(os.getenv('DATA_DIR_PROCESSED', 'data/processed'))\n",
@@ -43,44 +54,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Sample DataFrame:\n",
+      "        date ticker   price  volume\n",
+      "0 2024-01-01   AAPL  150.50   15311\n",
+      "1 2024-01-02   AAPL  150.36   47819\n",
+      "2 2024-01-03   AAPL  151.01   49188\n",
+      "3 2024-01-04   AAPL  152.53   27568\n",
+      "4 2024-01-05   AAPL  152.30   29769\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np\n",
-    "dates = pd.date_range('2024-01-01', periods=20, freq='D')\n",
-    "df = pd.DataFrame({'date': dates, 'ticker': ['AAPL']*20, 'price': 150 + np.random.randn(20).cumsum()})\n",
-    "df.head()"
+    "# 2. Create sample DataFrame\n",
+    "def create_sample_data():\n",
+    "    np.random.seed(42)\n",
+    "    dates = pd.date_range('2024-01-01', periods=10, freq='D')\n",
+    "    return pd.DataFrame({\n",
+    "        'date': dates,\n",
+    "        'ticker': ['AAPL']*5 + ['MSFT']*5,\n",
+    "        'price': np.round(150 + np.random.randn(10).cumsum(), 2),\n",
+    "        'volume': np.random.randint(10000, 50000, 10)\n",
+    "    })\n",
+    "\n",
+    "df = create_sample_data()\n",
+    "print(\"\\nSample DataFrame:\")\n",
+    "print(df.head())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2) Save CSV to data/raw/ and Parquet to data/processed/ (TODO)\n",
+    "## 2) Save CSV to data/raw/ and Parquet to data/processed\n",
     "- Use timestamped filenames.\n",
     "- Handle missing Parquet engine gracefully."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Saved CSV to: data/raw/stock_data_20250817_135352.csv\n",
+      "Saved Parquet to: data/processed/stock_data_20250817_135352.parquet\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('data/processed/stock_data_20250817_135352.parquet')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def ts(): return dt.datetime.now().strftime('%Y%m%d-%H%M%S')\n",
+    "# 3. Save in both formats\n",
+    "def get_timestamp():\n",
+    "    return dt.datetime.now().strftime('%Y%m%d_%H%M%S')\n",
     "\n",
-    "# TODO: Save CSV\n",
-    "csv_path = RAW / f\"sample_{ts()}.csv\"\n",
+    "# Save CSV to raw\n",
+    "csv_filename = f\"stock_data_{get_timestamp()}.csv\"\n",
+    "csv_path = RAW / csv_filename\n",
     "df.to_csv(csv_path, index=False)\n",
-    "csv_path\n",
+    "print(f\"\\nSaved CSV to: {csv_path}\")\n",
     "\n",
-    "# TODO: Save Parquet\n",
-    "pq_path = PROC / f\"sample_{ts()}.parquet\"\n",
+    "# Save Parquet to processed\n",
+    "pq_filename = f\"stock_data_{get_timestamp()}.parquet\"\n",
+    "pq_path = PROC / pq_filename\n",
     "try:\n",
-    "    df.to_parquet(pq_path)\n",
+    "    df.to_parquet(pq_path, engine='pyarrow')\n",
+    "    print(f\"Saved Parquet to: {pq_path}\")\n",
     "except Exception as e:\n",
-    "    print('Parquet engine not available. Install pyarrow or fastparquet to complete this step.')\n",
+    "    print(f\"\\nParquet save failed (install pyarrow/fastparquet): {e}\")\n",
     "    pq_path = None\n",
     "pq_path"
    ]
@@ -99,16 +160,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_loaded(original, reloaded):\n",
-    "    checks = {\n",
-    "        'shape_equal': original.shape == reloaded.shape,\n",
-    "        'date_is_datetime': pd.api.types.is_datetime64_any_dtype(reloaded['date']) if 'date' in reloaded.columns else False,\n",
-    "        'price_is_numeric': pd.api.types.is_numeric_dtype(reloaded['price']) if 'price' in reloaded.columns else False,\n",
+    "# 4. Reload and validate\n",
+    "def validate_reloaded(original, reloaded):\n",
+    "    \"\"\"Validate shape, dtypes and critical columns\"\"\"\n",
+    "    validation = {\n",
+    "        'shapes_match': original.shape == reloaded.shape,\n",
+    "        'columns_match': set(original.columns) == set(reloaded.columns),\n",
+    "        'date_dtype_ok': pd.api.types.is_datetime64_any_dtype(reloaded['date']),\n",
+    "        'price_dtype_ok': pd.api.types.is_float_dtype(reloaded['price']),\n",
+    "        'volume_dtype_ok': pd.api.types.is_integer_dtype(reloaded['volume']),\n",
+    "        'data_integrity': original.equals(reloaded)\n",
     "    }\n",
-    "    return checks\n",
+    "    return pd.Series(validation)\n",
     "\n",
+    "# Validate CSV\n",
     "df_csv = pd.read_csv(csv_path, parse_dates=['date'])\n",
-    "validate_loaded(df, df_csv)"
+    "print(\"\\nCSV Validation Results:\")\n",
+    "print(validate_reloaded(df, df_csv))"
    ]
   },
   {
@@ -194,12 +262,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "bootcamp_env",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
