--- a/homework/homework5/stage05_data-storage_homework-starter.ipynb
+++ b/homework/homework5/stage05_data-storage_homework-starter.ipynb
@@ -150,15 +150,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3) Reload and Validate (TODO)\n",
+    "## 3) Reload and Validate\n",
     "- Compare shapes and key dtypes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "CSV Validation Results:\n",
+      "shapes_match       True\n",
+      "columns_match      True\n",
+      "date_dtype_ok      True\n",
+      "price_dtype_ok     True\n",
+      "volume_dtype_ok    True\n",
+      "data_integrity     True\n",
+      "dtype: bool\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Reload and validate\n",
     "def validate_reloaded(original, reloaded):\n",
@@ -181,32 +197,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Parquet Validation Results:\n",
+      "shapes_match       True\n",
+      "columns_match      True\n",
+      "date_dtype_ok      True\n",
+      "price_dtype_ok     True\n",
+      "volume_dtype_ok    True\n",
+      "data_integrity     True\n",
+      "dtype: bool\n"
+     ]
+    }
+   ],
    "source": [
+    "# Validate Parquet if saved\n",
     "if pq_path:\n",
     "    try:\n",
     "        df_pq = pd.read_parquet(pq_path)\n",
-    "        validate_loaded(df, df_pq)\n",
+    "        print(\"\\nParquet Validation Results:\")\n",
+    "        print(validate_reloaded(df, df_pq))\n",
     "    except Exception as e:\n",
-    "        print('Parquet read failed:', e)"
+    "        print(f\"\\nParquet read failed: {e}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4) Utilities (TODO)\n",
+    "## 4) Utilities\n",
     "- Implement `detect_format`, `write_df`, `read_df`.\n",
     "- Use suffix to route; create parent dirs if needed; friendly errors for Parquet."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Testing utility functions...\n",
+      "CSV utility test passed: True\n",
+      "Parquet utility test passed: True\n"
+     ]
+    }
+   ],
    "source": [
     "import typing as t, pathlib\n",
     "\n",
@@ -216,47 +261,73 @@
     "    if s.endswith('.parquet') or s.endswith('.pq') or s.endswith('.parq'): return 'parquet'\n",
     "    raise ValueError('Unsupported format: ' + s)\n",
     "\n",
-    "def write_df(df: pd.DataFrame, path: t.Union[str, pathlib.Path]):\n",
-    "    p = pathlib.Path(path); p.parent.mkdir(parents=True, exist_ok=True)\n",
-    "    fmt = detect_format(p)\n",
-    "    if fmt == 'csv':\n",
-    "        df.to_csv(p, index=False)\n",
-    "    else:\n",
+    "# 5. Implement utility functions\n",
+    "def write_df(df: pd.DataFrame, path: pathlib.Path) -> pathlib.Path:\n",
+    "    \"\"\"Save DataFrame based on file extension\"\"\"\n",
+    "    path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "    suffix = path.suffix.lower()\n",
+    "    \n",
+    "    if suffix == '.csv':\n",
+    "        df.to_csv(path, index=False)\n",
+    "    elif suffix in ('.parquet', '.pq'):\n",
     "        try:\n",
-    "            df.to_parquet(p)\n",
+    "            df.to_parquet(path, engine='pyarrow')\n",
     "        except Exception as e:\n",
-    "            raise RuntimeError('Parquet engine not available. Install pyarrow or fastparquet.') from e\n",
-    "    return p\n",
-    "\n",
-    "def read_df(path: t.Union[str, pathlib.Path]):\n",
-    "    p = pathlib.Path(path)\n",
-    "    fmt = detect_format(p)\n",
-    "    if fmt == 'csv':\n",
-    "        return pd.read_csv(p, parse_dates=['date']) if 'date' in pd.read_csv(p, nrows=0).columns else pd.read_csv(p)\n",
+    "            raise RuntimeError(\n",
+    "                \"Parquet support requires pyarrow or fastparquet. \"\n",
+    "                f\"Error: {str(e)}\"\n",
+    "            )\n",
     "    else:\n",
-    "        try:\n",
-    "            return pd.read_parquet(p)\n",
-    "        except Exception as e:\n",
-    "            raise RuntimeError('Parquet engine not available. Install pyarrow or fastparquet.') from e\n",
+    "        raise ValueError(f\"Unsupported file format: {suffix}\")\n",
+    "    \n",
+    "    return path\n",
     "\n",
-    "# Demo\n",
-    "p_csv = RAW / f\"util_{ts()}.csv\"\n",
-    "p_pq  = PROC / f\"util_{ts()}.parquet\"\n",
-    "write_df(df, p_csv); read_df(p_csv).head()\n",
+    "def read_df(path: pathlib.Path) -> pd.DataFrame:\n",
+    "    \"\"\"Load DataFrame based on file extension\"\"\"\n",
+    "    suffix = path.suffix.lower()\n",
+    "    \n",
+    "    if suffix == '.csv':\n",
+    "        # Auto-detect date columns\n",
+    "        date_cols = [col for col in pd.read_csv(path, nrows=0).columns \n",
+    "                    if 'date' in col.lower()]\n",
+    "        return pd.read_csv(path, parse_dates=date_cols)\n",
+    "    elif suffix in ('.parquet', '.pq'):\n",
+    "        try:\n",
+    "            return pd.read_parquet(path)\n",
+    "        except Exception as e:\n",
+    "            raise RuntimeError(\n",
+    "                \"Parquet support requires pyarrow or fastparquet. \"\n",
+    "                f\"Error: {str(e)}\"\n",
+    "            )\n",
+    "    else:\n",
+    "        raise ValueError(f\"Unsupported file format: {suffix}\")\n",
+    "    \n",
+    "# Test utilities\n",
+    "print(\"\\nTesting utility functions...\")\n",
+    "test_csv = RAW / f\"test_util_{get_timestamp()}.csv\"\n",
+    "test_pq = PROC / f\"test_util_{get_timestamp()}.parquet\"\n",
+    "\n",
+    "# Test CSV\n",
+    "write_df(df, test_csv)\n",
+    "df_test_csv = read_df(test_csv)\n",
+    "print(f\"CSV utility test passed: {df.equals(df_test_csv)}\")\n",
+    "\n",
+    "# Test Parquet if available\n",
     "try:\n",
-    "    write_df(df, p_pq)\n",
-    "    read_df(p_pq).head()\n",
+    "    write_df(df, test_pq)\n",
+    "    df_test_pq = read_df(test_pq)\n",
+    "    print(f\"Parquet utility test passed: {df.equals(df_test_pq)}\")\n",
     "except RuntimeError as e:\n",
-    "    print('Skipping Parquet util demo:', e)"
+    "    print(f\"Parquet utility test skipped: {e}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5) Documentation (TODO)\n",
+    "## 5) Documentation: See in README.md\n",
     "- Update README with a **Data Storage** section (folders, formats, env usage).\n",
-    "- Summarize validation checks and any assumptions."
+    "- Summarize validation checks and any assumptions.\n"
    ]
   }
  ],
