--- a/project/notebooks/project_stage11_evaluation-risk-communication.ipynb
+++ b/project/notebooks/project_stage11_evaluation-risk-communication.ipynb
@@ -5,14 +5,12 @@
    "id": "5284ed1f",
    "metadata": {},
    "source": [
-    "# Stage 11 Homework — Evaluation & Risk Communication\n",
-    "In the lecture, we learned **parametric vs bootstrap CIs**, **scenario sensitivity**, and **subgroup checks**.\n",
-    "Now, you will adapt those methods to your dataset and produce assumption-aware results."
+    "# Stage 11: Evaluation & Risk Communication"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "1a562c1b",
    "metadata": {},
    "outputs": [
@@ -33,15 +31,16 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from pathlib import Path\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
     "\n",
     "# Set random seed for reproducibility\n",
     "np.random.seed(111)\n",
     "\n",
     "# Import helper functions\n",
+    "import os\n",
     "import sys\n",
-    "sys.path.append('../src')\n",
+    "src_path = os.path.abspath(os.path.join(os.getcwd(), \"../src\"))\n",
+    "if src_path not in sys.path:\n",
+    "    sys.path.insert(0, src_path)\n",
     "from evaluation import *\n",
     "\n",
     "# Set plotting style\n",
@@ -55,12 +54,12 @@
    "id": "72e31057",
    "metadata": {},
    "source": [
-    "## Load Data (provided or synthetic fallback)"
+    "## Load Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "769a0b5e",
    "metadata": {},
    "outputs": [
@@ -152,7 +151,7 @@
        "4 2022-06-05       A   0.642399  1.615007"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,69 +196,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b80c4d0",
-   "metadata": {},
-   "source": [
-    "## Helper Functions (complete or modify as needed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "07b9dfe5",
-   "metadata": {
-    "tags": [
-     "grade_required"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "def mean_impute(a: np.ndarray) -> np.ndarray:\n",
-    "    m = np.nanmean(a)\n",
-    "    out = a.copy()\n",
-    "    out[np.isnan(out)] = m\n",
-    "    return out\n",
-    "\n",
-    "def median_impute(a: np.ndarray) -> np.ndarray:\n",
-    "    m = np.nanmedian(a)\n",
-    "    out = a.copy()\n",
-    "    out[np.isnan(out)] = m\n",
-    "    return out\n",
-    "\n",
-    "class SimpleLinReg:\n",
-    "    def fit(self, X, y):\n",
-    "        X1 = np.c_[np.ones(len(X)), X.ravel()]\n",
-    "        beta = np.linalg.pinv(X1) @ y\n",
-    "        self.intercept_, self.coef_ = float(beta[0]), np.array([float(beta[1])])\n",
-    "        return self\n",
-    "    def predict(self, X):\n",
-    "        return self.intercept_ + self.coef_[0] * X.ravel()\n",
-    "\n",
-    "def mae(y_true, y_pred):\n",
-    "    return float(np.mean(np.abs(y_true - y_pred)))\n",
-    "\n",
-    "# def bootstrap_metric(y_true, y_pred, fn, n_boot=500, seed=111, alpha=0.05):\n",
-    "#     rng = np.random.default_rng(seed)\n",
-    "#     idx = np.arange(len(y_true))\n",
-    "#     stats = []\n",
-    "#     for _ in range(n_boot):\n",
-    "#         b = rng.choice(idx, size=len(idx), replace=True)\n",
-    "#         stats.append(fn(y_true[b], y_pred[b]))\n",
-    "#     lo, hi = np.percentile(stats, [100*alpha/2, 100*(1-alpha/2)])\n",
-    "#     return {'mean': float(np.mean(stats)), 'lo': float(lo), 'hi': float(hi)}\n",
-    "\n",
-    "def fit_fn(X, y):\n",
-    "    return SimpleLinReg().fit(X, y)\n",
-    "def pred_fn(model, X):\n",
-    "    return model.predict(X)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "816d9c3f",
    "metadata": {},
    "source": [
-    "## Baseline Fit & Residuals (Required)"
+    "## Baseline Fit & Residuals"
    ]
   },
   {
