--- a/project/notebooks/project_stage12-results-reporting-delivery-design-stakeholder-communication.ipynb
+++ b/project/notebooks/project_stage12-results-reporting-delivery-design-stakeholder-communication.ipynb
@@ -4,24 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Homework Starter: Final Reporting\n",
-    "\n",
-    "This notebook helps you generate plots, annotate assumptions, and prepare a stakeholder-ready deliverable."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Executive Summary\n",
-    "- Baseline scenario shows steady returns with moderate volatility.\n",
-    "- Imputation and outlier adjustments create small variations in return and risk.\n",
-    "- Key assumptions and sensitivity analysis highlight decision risks and implications."
+    "## Stage12"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +22,7 @@
     }
    ],
    "source": [
-    "# Stage 12: Final Reporting - Complete Solution\n",
+    "# Stage 12\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
